logping/ping-pong/manifests/knativeping.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pingpong
  namespace: exercises
spec:
  template:
    spec:
      containers:
        - name: ping-pong
          image: kassudin/ping-pong:1.8
          ports:
            - containerPort: 3000
          env:
            - name: DATABASE_URL
              value: "postgresql://postgres:x@postgres-svc:5432/postgres"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
